tests/ui/transparent/struct_multiple_fields.stderr
error: #[error(transparent)] requires exactly one field
 --> tests/ui/transparent/struct_multiple_fields.rs:8:1
  |
8 | #[error(transparent)]
  | ^^^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/transparent/struct_multiple_fields.rs:12:2
   |
12 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/transparent/struct_multiple_fields.rs`
