tests/ui/transparent/struct_multiple_fields.rs
// SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
//
// SPDX-License-Identifier: MIT

use masterror::Error;

#[derive(Debug, Error)]
#[error(transparent)]
struct TransparentMany {
    first: String,
    second: String
}
